--- a/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
+++ b/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://192.168.1.78:8888
 spring.application.name=parametros
 server.port=8100
 spring.profiles.active=qa
