Se implementa rebbon y feign

--- a/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
+++ b/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
@@ -2,5 +2,6 @@ spring.cloud.config.uri=http://192.168.1.78:8888
 spring.application.name=parametros
 server.port=8100
 spring.profiles.active=qa
+producto-service.ribbon.listOfServers=http://192.168.1.73:8000,http://192.168.1.73:8001,http://192.168.1.73:8002,http://192.168.1.73:8004
  
 
