--- a/1-practica-cloud-reorden-config/src/main/resources/application.properties
+++ b/1-practica-cloud-reorden-config/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 #propiedades del servidor Reorden config
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/IsDanielVz/1-practica-cloud
+management.endpoints.web.exposure.include=*
