--- a/1-practica-cloud-inventario-rest/pom.xml
+++ b/1-practica-cloud-inventario-rest/pom.xml
@@ -35,6 +35,11 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-browser</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.springframework.boot</groupId> -->
