--- a/1-practica-cloud-inventario-rest/src/main/resources/application.properties
+++ b/1-practica-cloud-inventario-rest/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=practica-cloud-inventario-rest
 server.port=8000
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mysql://localhost:3306/inventario2?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=tecguru$
+spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
+#Tamaño del pool de conexiones
+spring.datasource.tomcat.initial-size=2
+loggin.level.org.hibernate.type.descriptor.sql=trace
