--- a/1-practica-cloud-inventario-rest/src/main/resources/application.properties
+++ b/1-practica-cloud-inventario-rest/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8000
 spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:mysql://localhost:3306/inventario2?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.1.72:3306/inventario2?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=tecguru$
 spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
