--- a/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
+++ b/1-practica-cloud-compra-rest/src/main/resources/bootstrap.properties
@@ -1,7 +1,16 @@
 spring.cloud.config.uri=http://192.168.1.78:8888
+management.endpoints.web.exposure.include=*
 spring.application.name=parametros
 server.port=8100
 spring.profiles.active=qa
-producto-service.ribbon.listOfServers=http://192.168.1.73:8000,http://192.168.1.73:8001,http://192.168.1.73:8002,http://192.168.1.73:8004
- 
+producto-service.ribbon.listOfServers=http://192.168.1.73:8000
+#,http://192.168.1.73:8001,http://192.168.1.73:8002,http://192.168.1.73:8004
+spring.datasource.url=jdbc:mysql://localhost:3306/inventario2?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=tecguru$
+spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
+#Tamaño del pool de conexiones
+spring.datasource.tomcat.initial-size=2
+loggin.level.org.hibernate.type.descriptor.sql=trace
+
 
