--- a/1-practica-cloud-inventario-rest/src/main/resources/application.properties
+++ b/1-practica-cloud-inventario-rest/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=practica-cloud-inventario-rest
 server.port=8000
+#Configuracion SQL
 spring.jpa.show-sql=true
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
@@ -10,3 +11,5 @@ spring.datasource.driver-class=com.mysql.cj.jdbc.Driver
 #Tamaño del pool de conexiones
 spring.datasource.tomcat.initial-size=2
 loggin.level.org.hibernate.type.descriptor.sql=trace
+eureka.client.serviceUrl.defaultZone=http://192.168.1.72:8761/eureka
+
