--- a/1-practica-cloud-reorden-config/src/main/resources/application.properties
+++ b/1-practica-cloud-reorden-config/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #propiedades del servidor Reorden config
+spring.application.name=spring-cloud-reorden-config
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/IsDanielVz/1-practica-cloud
 management.endpoints.web.exposure.include=*
+eureka.client.serviceUrl.defaultZone=http://192.168.1.72:8761/eureka
